# oh-my-pi

./: .gitignore  AGENTS.md  Cargo.toml  README.md  package.json  rust-toolchain.toml
.github/actions/build-native/: action.yml
.github/workflows/: ci.yml
crates/pi-ast/src/: block.rs
crates/pi-natives/: Cargo.toml
crates/pi-natives/src/: ast.rs  clipboard.rs  fd.rs  fs_cache.rs  glob.rs  grep.rs  html.rs  image.rs  lib.rs  prof.rs  shell.rs  task.rs
crates/pi-shell/src/minimizer/: pipeline.rs
crates/pi-shell/src/minimizer/defs/: helm.toml
crates/pi-shell/src/minimizer/filters/: ruby.rs
crates/pi-uutils-ctx/src/: lib.rs
docs/: local-models.md  mcp-config.md  models.md  rpc.md
docs/toolconv/: anthropic.md  deepseek.md  glm-4.5.md  harmony.md  kimi-k2.md  pi-native.md  qwen3.md
docs/tools/: search.md
python/robomp/: .env.example  AGENTS.md  Dockerfile  README.md
python/robomp/src/: server.py
python/robomp/tests/: test_server.py  test_status_contract.py
python/robomp/web/: index.html  package.json
python/robomp/web/scripts/: verify-cards.ts  verify-live.ts
python/robomp/web/src/: App.tsx  theme.ts  types.ts  view.ts  work-items.contract.test.ts  work-items.test.ts  work-items.ts
python/robomp/web/src/components/: Browse.tsx  GlassCard.tsx  IssueCard.tsx  LifecycleStepper.tsx  Pipeline.tsx  ThemeToggle.tsx  Trigger.tsx
python/robomp/web/src/components/shell/: Rail.tsx  Shell.tsx  TopBar.tsx  Vitals.tsx
python/robomp/web/src/components/views/: Activity.tsx  Operations.tsx  Triage.tsx
python/robomp/web/src/styles/: index.css
python/robomp/web/test/fixtures/: status-contract.json
scripts/install-tests/: run-ci.sh
scripts/session-stats/: Cargo.toml  README.md
types/assets/: index.d.ts
